[package]
name = "variegated-serial-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
apec-r0d = ['uart1']
open-lcc-r2a = []
uart0 = []
uart1 = []

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4"}

variegated-log = { version = "0.1.0", path = "../variegated-rs/variegated-log" }

embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-boot-rp = { version = "0.3.0"}
embassy-boot = { version = "0.3.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-time-queue-driver = "0.1.0"
embassy-embedded-hal = {  version = "0.2.0"}

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
embedded-io-async = "0.6.1"
cfg-if = "1.0.0"

crc = "3.2.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.0"
serde-big-array = "0.5.1"

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
digest = "0.10.7"
sha2 = { version = "0.10", default-features = false }

embassy-futures = { version = "0.1.0" }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-usb-logger = { version = "0.2.0"}

embedded-io = "0.6.1"

log = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

assign-resources = "0.4.1"

[build-dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }